--- a/package.json
+++ b/package.json
@@ -24,10 +24,14 @@
     "@mantine/carousel": "6.0.2",
     "@mantine/core": "6.0.2",
     "@mantine/dates": "6.0.2",
+    "@mantine/dropzone": "6.0.2",
     "@mantine/hooks": "6.0.2",
+    "@mantine/modals": "6.0.2",
     "@mantine/next": "6.0.2",
     "@mantine/notifications": "6.0.2",
+    "@mantine/nprogress": "6.0.2",
     "@mantine/prism": "6.0.2",
+    "@mantine/spotlight": "6.0.2",
     "@next/bundle-analyzer": "^13.1.6",
     "@tabler/icons": "^1.107.0",
     "@tabler/icons-react": "^2.4.0",
