--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "storybook-addon-turbo-build": "^1.1.0",
     "storybook-dark-mode": "^1.1.2",
     "ts-jest": "^27.1.4",
+    "tsconfig-paths-webpack-plugin": "^4.0.1",
     "typescript": "4.8.4"
   }
 }
