--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@mantine/dates": "6.0.2",
     "@mantine/dropzone": "6.0.2",
     "@mantine/hooks": "6.0.2",
+    "@mantine/form": "^6.0.7",
     "@mantine/modals": "6.0.2",
     "@mantine/next": "6.0.2",
     "@mantine/notifications": "6.0.2",
