--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@mantine/dates": "6.0.2",
     "@mantine/dropzone": "6.0.2",
     "@mantine/hooks": "6.0.2",
+    "@mantine/form": "^6.0.7",
     "@mantine/modals": "6.0.2",
     "@mantine/next": "6.0.2",
     "@mantine/notifications": "6.0.2",
@@ -37,6 +38,7 @@
     "@tabler/icons-react": "^2.4.0",
     "@types/i18n-js": "^3.8.4",
     "apisauce": "^3.0.0",
+    "countries-list": "^2.6.1",
     "cookies-next": "^2.1.1",
     "dayjs": "^1.11.6",
     "embla-carousel-react": "^7.0.3",
