--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "@mantine/core": "6.0.2",
     "@mantine/dates": "6.0.2",
     "@mantine/dropzone": "6.0.2",
-    "@mantine/hooks": "6.0.2",
     "@mantine/form": "^6.0.7",
+    "@mantine/hooks": "6.0.2",
     "@mantine/modals": "6.0.2",
     "@mantine/next": "6.0.2",
     "@mantine/notifications": "6.0.2",
@@ -39,6 +39,7 @@
     "@types/i18n-js": "^3.8.4",
     "apisauce": "^3.0.0",
     "cookies-next": "^2.1.1",
+    "countries-list": "^2.6.1",
     "dayjs": "^1.11.6",
     "embla-carousel-react": "^7.0.3",
     "framer-motion": "^10.12.16",
