--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "rtl-detect": "^1.0.4"
+    "rtl-detect": "^1.0.4",
+    "sweetalert": "^2.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.17.8",
