--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "apisauce": "^3.0.0",
     "cookies-next": "^2.1.1",
     "countries-list": "^2.6.1",
+    "country-state-city": "^3.1.4",
     "dayjs": "^1.11.6",
     "embla-carousel-react": "^7.0.3",
     "framer-motion": "^10.12.16",
