--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.17.8",
+    "@iconify/react": "^4.1.1",
     "@next/eslint-plugin-next": "^12.1.4",
     "@storybook/addon-essentials": "6.5.13",
     "@storybook/addon-links": "6.5.13",
