--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "countries-list": "^2.6.1",
     "country-state-city": "^3.1.4",
     "dayjs": "^1.11.6",
+    "embla-carousel-autoplay": "^8.0.0-rc14",
     "embla-carousel-react": "^7.0.3",
     "framer-motion": "^10.12.16",
     "i18n-js": "3.9.2",
