--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@mantine/hooks": "6.0.2",
     "@mantine/modals": "6.0.2",
     "@mantine/next": "6.0.2",
-    "@mantine/notifications": "6.0.2",
+    "@mantine/notifications": "^6.0.2",
     "@mantine/nprogress": "6.0.2",
     "@mantine/prism": "6.0.2",
     "@mantine/spotlight": "6.0.2",
