--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "eslint-plugin-testing-library": "^5.2.0",
     "jest": "^27.5.1",
     "prettier": "^2.7.1",
+    "react-phone-number-input": "^3.3.7",
     "storybook-addon-turbo-build": "^1.1.0",
     "storybook-dark-mode": "^1.1.2",
     "ts-jest": "^27.1.4",
